# codereviewops

./: .dockerignore  .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md
benchmarks/baselines/: m4_replay_v1.json
benchmarks/matrices/: m4_replay_transport_v1.json
benchmarks/source/boundary_test_001/: case.json
benchmarks/source/clean_cache_001/: case.json
benchmarks/source/clean_parser_001/: case.json
benchmarks/source/clean_retry_001/: case.json
benchmarks/source/clean_security_001/: case.json
benchmarks/source/clean_validation_001/: case.json
benchmarks/source/duplicated_policy_001/: case.json
benchmarks/source/error_shape_001/: case.json
benchmarks/source/exception_test_001/: case.json
benchmarks/source/http_retry_001/: case.json
benchmarks/source/misleading_default_001/: case.json
benchmarks/tasks/: boundary_test_001.json  clean_cache_001.json  clean_parser_001.json  clean_retry_001.json  clean_security_001.json  clean_validation_001.json  duplicated_policy_001.json  error_shape_001.json  exception_test_001.json  http_retry_001.json  misleading_default_001.json  nullable_header_001.json  pagination_boundary_001.json  path_traversal_001.json  python_tools_001.json  quadratic_membership_001.json  redirect_allowlist_001.json  repeated_regex_001.json  retry_budget_test_001.json  stable_order_001.json  status_contract_001.json  swallowed_exception_001.json  timezone_rollover_001.json  token_redaction_001.json  zero_timeout_001.json
benchmarks/tasks/suites/: m4_25.json
runner/: Dockerfile
src/codereviewops/: __init__.py  artifacts.py  benchmark_baseline.py  benchmark_metrics.py  benchmark_models.py  benchmark_runner.py  benchmark_selection.py  benchmarking.py  cli.py  config.py  contracts.py  database.py  db_models.py  docker_runner.py  evaluation.py  io.py  mcp_backend.py  mcp_bootstrap.py  mcp_contracts.py  mcp_manifest.py  mcp_owned_backend.py  mcp_repo_server.py  mcp_servers.py  mcp_test_server.py  mcp_transport.py  mcp_typed.py  models.py  process_control.py  prompt.py  providers.py  tool_contracts.py  tools.py  workflow.py
tests/: conftest.py  test_artifacts.py  test_benchmark_runner.py  test_benchmarking.py  test_build_privacy.py  test_cli.py  test_docker_integration.py  test_docker_runner.py  test_evaluation.py  test_io_and_workflow.py  test_live_providers.py  test_live_smoke.py  test_m3_workflow.py  test_mcp.py  test_mcp_corrections.py  test_mcp_failures.py  test_mcp_lifecycle_corrections.py  test_models.py  test_persistence_foundation.py  test_tools.py
(+100 files in other folders)
